# weaklru

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml
tests/: test_weak_lru.py
weaklru/: __init__.py
